# Continuous-Delivery-Pipeline-Demo

./: .approved-dep.csv  .dockerignore  .gitignore  .trivyignore  Dockerfile  Dockerfile-clamav.dockerfile  Jenkinsfile  README.md  approved-dependencies.csv  cicd.sh  cicd2.sh  licenses-check.py  pyproject.toml  trivyignore-check.py
.githooks/: README.md
.github/workflows/: CodeQL.yml  build.yml  docker-image.yml
app/: app.py  gunicorn_config.py  test_app.py  test_selenium.py
app/static/: styles.css
app/templates/: index.html
jenkins-local/: Dockerfile  docker-compose.yaml  jenkins.yaml  seedJob.groovy  start-jenkins.sh
tests/: test_app.py
